changed example to work with the feature extractor

--- a/Code/example.ipynb
+++ b/Code/example.ipynb
@@ -163,6 +163,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from FeatureExtractor import extract_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -175,32 +184,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [39:41<00:00,  2.52it/s]\n"
+      "100%|██████████| 6000/6000 [18:18<00:00,  5.46it/s]\n"
      ]
     }
    ],
    "source": [
-    "# Check if CUDA is available and set the device\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(\"Using device:\", device)\n",
-    "\n",
-    "# Move the model to the specified device\n",
-    "model.to(device)\n",
-    "\n",
-    "def extract_features(loader, model):\n",
-    "    features = []\n",
-    "    labels = []\n",
-    "    with torch.no_grad():\n",
-    "        for images, targets in tqdm(loader):\n",
-    "            images = images.to(device)  # Move images to the device (GPU or CPU)\n",
-    "            outputs = model(images)\n",
-    "            features.append(outputs.cpu())  # Move outputs back to CPU for aggregation\n",
-    "            labels.extend(targets.cpu().numpy())  # Move labels to CPU and convert to numpy\n",
-    "\n",
-    "    features = torch.cat(features).numpy()\n",
-    "    return features, np.array(labels)\n",
-    "\n",
-    "features, labels = extract_features(loader, model)"
+    "features, labels = extract_features(loader,model)"
    ]
   },
   {
@@ -212,15 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H-score: 512.0761461703484\n",
-      "Shrinkage-based H-score: 276.46420982992\n"
+      "H-score: 512.0761556811954\n",
+      "Shrinkage-based H-score: 276.4642166425656\n"
      ]
     }
    ],
