added documentation about the LogME

--- a/Code/example.ipynb
+++ b/Code/example.ipynb
@@ -214,7 +214,7 @@
     }
    ],
    "source": [
-    "from TransferabilityMetrics import h_score, shrinkage_based_h_score\n",
+    "from TransferabilityMetrics import h_score,shrinkage_based_h_score,logME\n",
     "\n",
     "# Compute H-score\n",
     "hscore = h_score(features, labels)\n",
@@ -222,7 +222,10 @@
     "\n",
     "# Compute Shrinkage-based H-score\n",
     "sh_score = shrinkage_based_h_score(features, labels, alpha=0.1)\n",
-    "print(\"Shrinkage-based H-score:\", sh_score)"
+    "print(\"Shrinkage-based H-score:\", sh_score)\n",
+    "\n",
+    "lme = logME(features, labels)\n",
+    "print(\"LogME:\", lme)"
    ]
   }
  ],
