Updated with logme

--- a/Code/example.ipynb
+++ b/Code/example.ipynb
@@ -184,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6000/6000 [18:18<00:00,  5.46it/s]\n"
+      "100%|██████████| 6000/6000 [17:28<00:00,  5.72it/s]\n"
      ]
     }
    ],
@@ -201,15 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H-score: 512.0761556811954\n",
-      "Shrinkage-based H-score: 276.4642166425656\n"
+      "H-score: 512.076149847655\n",
+      "Shrinkage-based H-score: 276.46421219399855\n",
+      "LogME: -45639.1191915959\n"
      ]
     }
    ],
